--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1,11 +1,104 @@
-.column {
-    float: left;
-    
-}
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1 {
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  form {
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+  }
+  
+  label {
+    margin-top: 20px;
+    font-weight: bold;
+    display: block;
+  }
+  
+  input[type="file"] {
+    border: none;
+    padding: 10px;
+    background-color: #f2f2f2;
+    color: #555;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    margin-top: 5px;
+    margin-bottom: 20px;
+  }
+  
+  input[type="file"]:hover {
+    background-color: #ddd;
+  }
+  
+  input[type="file"]:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  }
 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
+  .ts_result {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .ts_result img {
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+  }  
+  
+  input[type="range"] {
+    width: 80%;
+    margin-top: 5px;
+  }
+  
+  .ts_button {
+    margin-top: 20px;
+    margin: 2px;
+    background-color: #4CAF50;
+    border: 5px;
+    border-color: #000;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .ts_button:hover {
+    background-color: #3e8e41;
+  }
+
+  .ts_maian_section {
+    margin-left: 30%;
+    margin-right: 30%;
+    border: 2px solid black;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+  }
+  .maian_section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  
