--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -100,5 +100,48 @@ body {
     align-items: center;
   }
 
+  .ts_result img {
+    position: relative;
+  }
 
+  .ts_result .download-button {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .ts_result img:hover + .download-button {
+    display: block;
+  }
+
+  .output-image {
+    position: relative;
+    display: inline-block;
+  }
+
+  .download-btn {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+
+  .output-image:hover .download-btn {
+    display: block;
+  }
   
